# Sortium

./: .buildinfo  .coverage  .gitignore  LICENSE  README.md  SortPy.rst  Sortium.rst  conf.py  genindex.html  index.html  index.rst  modules.html  modules.rst  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  something.py
.github/workflows/: deploy-docs.yml  release.yaml
_modules/: index.html
_modules/sortium/: file_utils.html  sorter.html
_sources/: index.rst.txt  modules.rst.txt
docs/: conf.py  index.rst  modules.rst  requirements.txt  sortium.rst
docs/_static/styles/: custom.css
src/SortPy/: __init__.py  file_utils.py  sorter.py
src/files_sorter/: __init__.py  sorter.py
src/sortium/: __init__.py  config.py  file_utils.py  sorter.py
src/tests/: test_file_tree.py  test_file_utils.py  test_sorter.py
tests/: test_sorter.py
