[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SortPy"
version = "1.1.0"
description = "A utility to sort files by type and date."
authors = [{ name = "Sarthak Goyal", email = "sarthakgoyal487@gmail.com" }]
readme = "README.md"
requires-python = ">=3"
license = { text = "MIT" }
dependencies = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "setuptools>=80.1.0",
]

[project.urls]
homepage = "https://github.com/Sarthak-G0yal/SortPy"